[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truenas_crypto_utils"
version = "0.1"
description = "TrueNAS Scale System Crypto Utils"
license = {text = "GNU3"}
requires-python = ">=3.11"
dependencies = [
    "acme",
    "cryptography",
    "josepy",
    "pyOpenSSL",
    "python-dateutil",
    "requests",
]

[tool.setuptools.packages.find]
include = [
    "truenas_acme_utils",
    "truenas_acme_utils.*",
    "truenas_crypto_utils",
    "truenas_crypto_utils.*",
]

[tool.setuptools.package-data]
truenas_acme_utils = ["py.typed"]
truenas_crypto_utils = ["py.typed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "josepy.*",
    "acme.*",
    "OpenSSL.*",
    "dateutil.*",
]
ignore_missing_imports = true
